Fix keyword z-index

--- a/app/assets/stylesheets/base/keyboard.scss
+++ b/app/assets/stylesheets/base/keyboard.scss
@@ -1,7 +1,7 @@
 #keyShortcuts {
 
 	.legend {
-		z-index: 9998;
+		z-index: 998;
 		display: block;
 		position: fixed;
 		top:calc(50vh + 74px); 
